// Copyright (c) 2013 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package wimax_manager;

enum EAPType {
  EAP_TYPE_NONE = 0;
  EAP_TYPE_TLS = 1;
  EAP_TYPE_TTLS_MD5 = 2;
  EAP_TYPE_TTLS_MSCHAPV2 = 3;
  EAP_TYPE_TTLS_CHAP = 4;
  EAP_TYPE_AKA = 5;
}

message EAPParameters {
  required EAPType type = 1;
  optional string anonymous_identity = 2;
  optional string user_identity = 3;
  optional string user_password = 4;
  optional bool bypass_device_certificate = 5;
  optional bool bypass_ca_certificate = 6;
}
