// Copyright (c) 2013 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package wimax_manager;

import "eap_parameters.proto";

message NetworkOperator {
  required uint32 identifier = 1;
  optional string name = 2;
  optional EAPParameters eap_parameters = 3;
}
